--- a/notebook/2.MODEL TRAINING.ipynb
+++ b/notebook/2.MODEL TRAINING.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "1               completed             90             88  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,42 +312,29 @@
     "from sklearn.compose import ColumnTransformer\n",
     "\n",
     "numeric_transformer=StandardScaler()\n",
-    "oh_transformer=OneHotEncoder()\n"
+    "oh_transformer=OneHotEncoder()\n",
+    "\n",
+    "preprocessor=ColumnTransformer(\n",
+    "    [\n",
+    "        (\"OneHotEncoder\",oh_transformer,cat_features),\n",
+    "        (\"StandardScaler\",numeric_transformer,num_features),\n",
+    "\n",
+    "    ]\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Specifying the columns using strings is only supported for pandas DataFrames",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "File \u001b[1;32me:\\Data Science\\Projects\\ML1\\ML_Env\\lib\\site-packages\\sklearn\\utils\\__init__.py:423\u001b[0m, in \u001b[0;36m_get_column_indices\u001b[1;34m(X, key)\u001b[0m\n\u001b[0;32m    422\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 423\u001b[0m     all_columns \u001b[39m=\u001b[39m X\u001b[39m.\u001b[39;49mcolumns\n\u001b[0;32m    424\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m:\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'columns'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[138], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m X \u001b[39m=\u001b[39m preprocessor\u001b[39m.\u001b[39;49mfit_transform(X)\n",
-      "File \u001b[1;32me:\\Data Science\\Projects\\ML1\\ML_Env\\lib\\site-packages\\sklearn\\utils\\_set_output.py:140\u001b[0m, in \u001b[0;36m_wrap_method_output.<locals>.wrapped\u001b[1;34m(self, X, *args, **kwargs)\u001b[0m\n\u001b[0;32m    138\u001b[0m \u001b[39m@wraps\u001b[39m(f)\n\u001b[0;32m    139\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwrapped\u001b[39m(\u001b[39mself\u001b[39m, X, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m--> 140\u001b[0m     data_to_wrap \u001b[39m=\u001b[39m f(\u001b[39mself\u001b[39;49m, X, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[0;32m    141\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(data_to_wrap, \u001b[39mtuple\u001b[39m):\n\u001b[0;32m    142\u001b[0m         \u001b[39m# only wrap the first output for cross decomposition\u001b[39;00m\n\u001b[0;32m    143\u001b[0m         return_tuple \u001b[39m=\u001b[39m (\n\u001b[0;32m    144\u001b[0m             _wrap_data_with_container(method, data_to_wrap[\u001b[39m0\u001b[39m], X, \u001b[39mself\u001b[39m),\n\u001b[0;32m    145\u001b[0m             \u001b[39m*\u001b[39mdata_to_wrap[\u001b[39m1\u001b[39m:],\n\u001b[0;32m    146\u001b[0m         )\n",
-      "File \u001b[1;32me:\\Data Science\\Projects\\ML1\\ML_Env\\lib\\site-packages\\sklearn\\base.py:1151\u001b[0m, in \u001b[0;36m_fit_context.<locals>.decorator.<locals>.wrapper\u001b[1;34m(estimator, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1144\u001b[0m     estimator\u001b[39m.\u001b[39m_validate_params()\n\u001b[0;32m   1146\u001b[0m \u001b[39mwith\u001b[39;00m config_context(\n\u001b[0;32m   1147\u001b[0m     skip_parameter_validation\u001b[39m=\u001b[39m(\n\u001b[0;32m   1148\u001b[0m         prefer_skip_nested_validation \u001b[39mor\u001b[39;00m global_skip_validation\n\u001b[0;32m   1149\u001b[0m     )\n\u001b[0;32m   1150\u001b[0m ):\n\u001b[1;32m-> 1151\u001b[0m     \u001b[39mreturn\u001b[39;00m fit_method(estimator, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[1;32me:\\Data Science\\Projects\\ML1\\ML_Env\\lib\\site-packages\\sklearn\\compose\\_column_transformer.py:740\u001b[0m, in \u001b[0;36mColumnTransformer.fit_transform\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m    738\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_n_features(X, reset\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m    739\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_validate_transformers()\n\u001b[1;32m--> 740\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_column_callables(X)\n\u001b[0;32m    741\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_validate_remainder(X)\n\u001b[0;32m    743\u001b[0m result \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_fit_transform(X, y, _fit_transform_one)\n",
-      "File \u001b[1;32me:\\Data Science\\Projects\\ML1\\ML_Env\\lib\\site-packages\\sklearn\\compose\\_column_transformer.py:448\u001b[0m, in \u001b[0;36mColumnTransformer._validate_column_callables\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    446\u001b[0m         columns \u001b[39m=\u001b[39m columns(X)\n\u001b[0;32m    447\u001b[0m     all_columns\u001b[39m.\u001b[39mappend(columns)\n\u001b[1;32m--> 448\u001b[0m     transformer_to_input_indices[name] \u001b[39m=\u001b[39m _get_column_indices(X, columns)\n\u001b[0;32m    450\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_columns \u001b[39m=\u001b[39m all_columns\n\u001b[0;32m    451\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_transformer_to_input_indices \u001b[39m=\u001b[39m transformer_to_input_indices\n",
-      "File \u001b[1;32me:\\Data Science\\Projects\\ML1\\ML_Env\\lib\\site-packages\\sklearn\\utils\\__init__.py:425\u001b[0m, in \u001b[0;36m_get_column_indices\u001b[1;34m(X, key)\u001b[0m\n\u001b[0;32m    423\u001b[0m     all_columns \u001b[39m=\u001b[39m X\u001b[39m.\u001b[39mcolumns\n\u001b[0;32m    424\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m:\n\u001b[1;32m--> 425\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    426\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mSpecifying the columns using strings is only \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    427\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39msupported for pandas DataFrames\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    428\u001b[0m     )\n\u001b[0;32m    429\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, \u001b[39mstr\u001b[39m):\n\u001b[0;32m    430\u001b[0m     columns \u001b[39m=\u001b[39m [key]\n",
-      "\u001b[1;31mValueError\u001b[0m: Specifying the columns using strings is only supported for pandas DataFrames"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X = preprocessor.fit_transform(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +343,7 @@
        "(1000, 19)"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +373,7 @@
        "((800, 19), (200, 19))"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -464,19 +451,19 @@
       "MAE  : 0.0187\n",
       "R2   : 0.9997\n",
       "Model performance for Test set\n",
-      "RMSE : 8.0511\n",
-      "MAE  : 6.3000\n",
-      "R2   : 0.7336\n",
+      "RMSE : 7.8080\n",
+      "MAE  : 6.1150\n",
+      "R2   : 0.7495\n",
       "_____________________________________\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "RMSE : 2.3180\n",
-      "MAE  : 1.8313\n",
-      "R2   : 0.9762\n",
+      "RMSE : 2.3247\n",
+      "MAE  : 1.8523\n",
+      "R2   : 0.9760\n",
       "Model performance for Test set\n",
-      "RMSE : 5.9686\n",
-      "MAE  : 4.6619\n",
-      "R2   : 0.8536\n",
+      "RMSE : 5.9659\n",
+      "MAE  : 4.5944\n",
+      "R2   : 0.8537\n",
       "_____________________________________\n",
       "XGBRegressor\n",
       "Model performance for Training set\n",
@@ -500,13 +487,13 @@
       "_____________________________________\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "RMSE : 5.7918\n",
-      "MAE  : 4.7217\n",
-      "R2   : 0.8512\n",
+      "RMSE : 5.7620\n",
+      "MAE  : 4.6981\n",
+      "R2   : 0.8527\n",
       "Model performance for Test set\n",
-      "RMSE : 6.0773\n",
-      "MAE  : 4.7714\n",
-      "R2   : 0.8482\n",
+      "RMSE : 5.9697\n",
+      "MAE  : 4.6587\n",
+      "R2   : 0.8535\n",
       "_____________________________________\n"
      ]
     }
@@ -579,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -621,17 +608,17 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.853604</td>\n",
+       "      <td>0.853737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>AdaBoost Regressor</td>\n",
+       "      <td>0.853546</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>CatBoosting Regressor</td>\n",
        "      <td>0.851632</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>AdaBoost Regressor</td>\n",
-       "      <td>0.848222</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -651,7 +638,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.733622</td>\n",
+       "      <td>0.749464</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -661,16 +648,16 @@
        "                Model Name  r2_Score\n",
        "2                    Ridge  0.880593\n",
        "0        Linear Regression  0.880345\n",
-       "5  Random Forest Regressor  0.853604\n",
+       "5  Random Forest Regressor  0.853737\n",
+       "8       AdaBoost Regressor  0.853546\n",
        "7    CatBoosting Regressor  0.851632\n",
-       "8       AdaBoost Regressor  0.848222\n",
        "1                    Lasso  0.825320\n",
        "6             XGBRegressor  0.821589\n",
        "3    K-Neighbors Regressor  0.783813\n",
-       "4            Decision Tree  0.733622"
+       "4            Decision Tree  0.749464"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +743,7 @@
        "<Axes: xlabel='math score'>"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -777,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +882,7 @@
        "[200 rows x 3 columns]"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +986,7 @@
        "5       43       43       43"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
